[package]
edition = "2021"
name = "agnos"
version = "0.1.0-alpha"
authors = ["Arthur Carcano"]
description = """Obtain (wildcard) certificates from let's encrypt \
using dns-01 without the need for API access to your DNS provider."""
readme = "README.md"
repository = "https://github.com/krtab/agnos"
license = "MIT"
exclude = [".github"]
categories = ["command-line-utilities"]

[dependencies]
acme2 = "0.5"
base64 = "0.13"
color-eyre = "0.6.2"
eyre = "0.6.5"
futures-util = "0.3.18"
openssl = "0.10.38"
reqwest = "0.11.7"
sha2 = "0.10.6"
toml = "0.5.8"
tracing = "0.1.29"
tracing-error = "0.2.0"
trust-dns-server = "0.22.0"
trust-dns-proto = "0.22.0"
async-trait = "0.1.57"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "fs"]
version = "1.14.0"

[dependencies.tracing-subscriber]
version = "0.3.3"
features = ["env-filter"]

[dependencies.clap]
version = "4.0.2"
features = ["cargo"]

[features]
