[package]
edition = "2021"
name = "agnos"
version = "0.1.0"
authors = ["Arthur Carcano"]
description = """Obtain (wildcard) certificates from let's encrypt \
using dns-01 without the need for API access to your DNS provider."""
default-run = "agnos"
readme = "README.md"
repository = "https://github.com/krtab/agnos"
license = "MIT"
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
    "resources/Banner-optimized.png",
    "resources/red-iron.png",
    "src",
    "systemd",
]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
acme2 = "0.5"
base64 = "0.21.0"
futures-util = "0.3.31"
openssl = "0.10.72"
# Currently cannot be upgraded because acme2 uses version 12
reqwest = "0.11.7"
sha2 = "0.10.6"
toml = { version = "0.7.2", default-features = false, features = ["parse"] }
tracing = "0.1.29"
tracing-error = "0.2.0"
hickory-server = "0.25.0"
hickory-proto = "0.25.0"
async-trait = "0.1.57"
anyhow = "1.0.69"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "fs"]
version = "1.38.2"

[dependencies.tracing-subscriber]
version = "0.3.3"
features = ["env-filter"]

[dependencies.clap]
version = "4.0.2"
features = ["cargo"]

[features]
